more mucking around/configuration

--- a/source/_includes/asides/about.html
+++ b/source/_includes/asides/about.html
@@ -1,6 +1,5 @@
 <section>
   <h1>About</h1>
-  <p>CS is a developer/designer hybrid living and working in New York City. 
-
+  <p>CS is a developer/designer hybrid living and working in New York City. 2012 Buspreneur <a href="http://www.twitter.com/#/thestartupbus">@thestartupbus</a>. Organizer for NYC Sass Meetup. <a href="http://http://www.radiohive.org/category/shows/family-album" title="My Family Album, A Music Radio Show">Radio maker</a></p>
 </section>
 
