heh. moving stuff. enough for now

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -13,6 +13,11 @@
         {% endif %}
       </p>
     {% endunless %}
+    
+    {% unless page.sharing == false %}
+      {% include post/sharing.html %}
+    {% endunless %}
+    
   </header>
 {% endunless %}
 {% if index %}
